@@ -1,5 +1,8 @@
 package com.zeebra.domain.product.service;
 
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+
 import com.zeebra.domain.brand.dto.BrandResponse;
 import com.zeebra.domain.brand.entity.Brand;
 import com.zeebra.domain.category.dto.CategorySearchResponse;
@@ -12,19 +15,23 @@ import com.zeebra.domain.product.dto.*;
 import com.zeebra.domain.product.entity.*;
 import com.zeebra.domain.product.repository.*;
 import com.zeebra.global.ApiResponse;
+import com.zeebra.global.ErrorCode.CommonErrorCode;
+import com.zeebra.global.exception.BusinessException;
 import com.zeebra.global.web.KeywordSanitizer;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import org.springframework.data.domain.Pageable;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
 
+@Transactional(readOnly = true)
 @Service
 @RequiredArgsConstructor
 @Slf4j
@@ -32,128 +39,36 @@ public class ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
     private final ProductQueryRepository productQueryRepository;
-    private final SalesRepository salesRepository;
-    private final ProductOptionRepository productOptionRepository;
     private final MemberRepository memberRepository;
     private final FavoriteProductRepository favoriteProductRepository;
     private final ProductOptionQueryRepository productOptionQueryRepository;
     private final OptionNameRepository optionNameRepository;
     private final MemberService memberService;
 
-    private List<GetProductDetailResponse> toProductDetailResponse(List<Product> products) {
-        return products.stream()
-                .map(product -> new GetProductDetailResponse(
-                        product.getId(),
-                        product.getBrandId(),
-                        product.getCategoryId(),
-                        product.getName(),
-                        product.getDescription(),
-                        product.getModelNumber(),
-                        product.getThumbnail(),
-                        product.getImages(),
-                        productQueryRepository.lowPriceOfProduct(product.getId()),
-                        product.getReviewCount(),
-                        product.getFavoriteProductCount(),
-                        product.getCreatedTime()
-                ))
-                .toList();
-    }
-
-    private ProductDetailResponse toProductDetailResponse(Product product,
-                                                          BigDecimal lowPriceOfProduct,
-                                                          List<ColorOptionResponse> colorOptionResponses,
-                                                          String colorValue) {
-        return new ProductDetailResponse(
-                product.getId(),
-                product.getBrandId(),
-                product.getCategoryId(),
-                product.getName(),
-                product.getDescription(),
-                product.getModelNumber(),
-                product.getThumbnail(),
-                product.getImages(),
-                lowPriceOfProduct,
-                product.getReviewCount(),
-                product.getFavoriteProductCount(),
-                product.getCreatedTime(),
-                colorOptionResponses,
-                colorValue);
-    }
-
-    private FavoriteProductResponse toFavoriteProductResponse(FavoriteProduct favoriteProduct) {
-        return new FavoriteProductResponse(
-                favoriteProduct.getProductId(),
-                favoriteProduct.getProductId(),
-                favoriteProduct.getMemberId(),
-                favoriteProduct.getCreatedTime());
-    }
-
-    private List<BrandResponse> toBrandListResponse(List<Brand> brands) {
-        return brands.stream()
-                .map(brand -> new BrandResponse(brand.getId(), brand.getName()))
-                .toList();
-    }
-
-    private List<CategorySearchResponse> toCategorySearchResponseList(List<Category> categories) {
-        return categories.stream()
-                .map(category -> new CategorySearchResponse(category.getId(), category.getName()))
-                .toList();
-    }
-
-    private SearchProductResponse toSearchProductResponse(List<GetProductDetailResponse> productDetailResponseList,
-                                                          List<BrandResponse> brandListResponse,
-                                                          List<CategorySearchResponse> categorySearchResponseList,
-                                                          Pagination pagination) {
-        return new SearchProductResponse(productDetailResponseList,
-                categorySearchResponseList,
-                brandListResponse,
-                pagination);
-    }
-
-    private ProductSort parseProductSort(String productSort) {
-        if (productSort == null || productSort.isBlank()) {
-            return ProductSort.REVIEW_COUNT_MOST;
-        }
-
-        return switch (productSort.trim().toLowerCase()) {
-            case "most_reviewed" -> ProductSort.REVIEW_COUNT_MOST;
-            case "least_reviewed" -> ProductSort.REVIEW_COUNT_LEAST;
-            default -> ProductSort.REVIEW_COUNT_MOST;
-        };
-    }
-
     @Override
     public ApiResponse<ProductDetailResponse> getProductDetail(Long productId, Long colorOptionNameId) {
-        try {
-            Product product = productRepository.findById(productId).orElseThrow(
-                    () -> new NoSuchElementException("해당하는 상품이 존재하지 않습니다."));
+        Product product = productRepository.findById(productId).orElseThrow(
+                () -> new NoSuchElementException("해당하는 상품이 존재하지 않습니다."));
 
-            List<OptionName> colorOptionNames = productOptionQueryRepository.findAllOptionNames(product.getId());
+        List<OptionName> colorOptionNames = productOptionQueryRepository.findAllOptionNames(product.getId());
 
-            List<ColorOptionResponse> colorOptionResponses = colorOptionNames.stream()
-                    .map(colorOptionName -> new ColorOptionResponse(colorOptionName.getId(), colorOptionName.getValue()))
-                    .toList();
+        List<ColorOptionResponse> colorOptionResponses = colorOptionNames.stream()
+                .map(colorOptionName -> new ColorOptionResponse(colorOptionName.getId(), colorOptionName.getValue()))
+                .toList();
 
-//            List<SizeOptionResponse> sizeOptionResponses = productOptionQueryRepository.findByColorOptionName(colorOptionResponses.get(0).optionNameId(), product.getId());
+        if (colorOptionNameId == null) {
 
-            if (colorOptionNameId == null) {
+            BigDecimal lowPriceOfColor = productQueryRepository.lowPriceOfColor(product.getId(), colorOptionResponses.getFirst().colorOptionNameId());
 
-                BigDecimal lowPriceOfColor = productQueryRepository.lowPriceOfColor(product.getId(), colorOptionResponses.get(0).colorOptionNameId());
+            return ApiResponse.success(ProductDetailResponse.from(product, lowPriceOfColor, colorOptionResponses, colorOptionResponses.getFirst().colorValue()));
+        } else {
 
-                return ApiResponse.success(toProductDetailResponse(product, lowPriceOfColor, colorOptionResponses, colorOptionResponses.get(0).colorValue()));
-            } else {
+            BigDecimal lowPriceOfColor = productQueryRepository.lowPriceOfColor(product.getId(), colorOptionNameId);
 
-                BigDecimal lowPriceOfColor = productQueryRepository.lowPriceOfColor(product.getId(), colorOptionNameId);
+            OptionName optionName = optionNameRepository.findById(colorOptionNameId).orElseThrow(
+                    () -> new NoSuchElementException("해당하는 옵션이름이 없습니다."));
 
-                OptionName optionName = optionNameRepository.findById(colorOptionNameId).orElseThrow(
-                        () -> new NoSuchElementException("해당하는 옵션이름이 없습니다."));
-
-                return ApiResponse.success(toProductDetailResponse(product, lowPriceOfColor, colorOptionResponses, optionName.getValue()));
-            }
-        } catch (NoSuchElementException e) {
-            return ApiResponse.error(null, e.getMessage());
-        } catch (Exception e) {
-            return ApiResponse.error(null, "상품 상세 조회 과정에 오류가 발생했습니다.");
+            return ApiResponse.success(ProductDetailResponse.from(product, lowPriceOfColor, colorOptionResponses, optionName.getValue()));
         }
     }
 
@@ -161,9 +76,7 @@ public class ProductServiceImpl implements ProductService {
     public ApiResponse<SizeOptionResponseList> getProductOptionSize(Long productId, Long colorOptionNameId) {
         OptionName optionName = optionNameRepository.findById(colorOptionNameId).orElseThrow(
                 () -> new NoSuchElementException("해당하는 옵션값이 없습니다."));
-        if (!"color".equals(optionName.getName())) {
-            return ApiResponse.error(null, "색상값이 아닙니다.");
-        }
+        optionName.validateOptionNameIsColor();
         List<SizeOptionResponse> sizeOptionResponses = productOptionQueryRepository.findByColorOptionName(colorOptionNameId, productId);
         return ApiResponse.success(new SizeOptionResponseList(sizeOptionResponses));
     }
@@ -171,35 +84,33 @@ public class ProductServiceImpl implements ProductService {
     @Transactional
     @Override
     public ApiResponse<FavoriteProductResponse> addFavoriteProduct(Long memberId, Long productId) {
-        try {
-            Member member = memberRepository.findById(memberId).orElseThrow(
-                    () -> new NoSuchElementException("해당하는 사용자가 없습니다"));
+        Member member = memberService.findByMemberId(memberId);
 
-            Product product = productRepository.findById(productId).orElseThrow(
-                    () -> new NoSuchElementException("해당하는 상품이 존재하지 않습니다."));
+        Product product = findByProductId(productId);
+
+        if (favoriteProductRepository.findByMemberIdAndProductId(memberId, productId).isPresent()) {
+            throw new IllegalStateException("이미 관심 상품에 등록된 상품입니다.");
+        } else {
 
             FavoriteProduct favoriteProduct = favoriteProductRepository.save(new FavoriteProduct(member.getId(), product.getId()));
 
             product.increaseFavoriteProductCount();
 
-            productRepository.save(product);
-
-            return ApiResponse.success(toFavoriteProductResponse(favoriteProduct));
-        } catch (NoSuchElementException e) {
-            return ApiResponse.error(null, e.getMessage());
-        } catch (Exception e) {
-            return ApiResponse.error(null, "관심 상품 추가 과정에 오류가 발생했습니다.");
+            return ApiResponse.success(FavoriteProductResponse.toFavoriteProductResponse(favoriteProduct));
         }
+    }
+
+    public Product findByProductId(Long productId) {
+        return productRepository.findById(productId).orElseThrow(
+                () -> new NoSuchElementException("해당하는 상품이 존재하지 않습니다."));
     }
 
     @Transactional
     @Override
     public ApiResponse<Void> deleteFavoriteProduct(Long memberId, Long productId) {
-        Member member = memberRepository.findById(memberId).orElseThrow(
-                () -> new NoSuchElementException("해당하는 사용자가 없습니다"));
+        Member member = memberService.findByMemberId(memberId);
 
-        Product product = productRepository.findById(productId).orElseThrow(
-                () -> new NoSuchElementException("해당하는 상품이 존재하지 않습니다."));
+        Product product = findByProductId(productId);
 
         FavoriteProduct favoriteProduct = favoriteProductRepository.findByMemberIdAndProductId(member.getId(), product.getId()).orElseThrow(
                 () -> new NoSuchElementException("해당하는 관심 상품이 없습니다."));
@@ -208,9 +119,7 @@ public class ProductServiceImpl implements ProductService {
 
         product.decreaseFavoriteProductCount();
 
-        productRepository.save(product);
-
-        return ApiResponse.successMessage("상품 삭제에 성공했습니다.");
+        return ApiResponse.successMessage("관심 상품 삭제에 성공했습니다.");
     }
 
     @Override
@@ -229,10 +138,9 @@ public class ProductServiceImpl implements ProductService {
                                                             Pageable pageable,
                                                             String productSort) {
 
-
         String cleanKeyword = KeywordSanitizer.sanitize(keyWord);
 
-        ProductSort parseProductSort = parseProductSort(productSort);
+        ProductSort parseProductSort = ProductSort.from(productSort);
 
         List<Product> products = productQueryRepository.searchProduct(cleanKeyword, categoryIds, brandIds, pageable, parseProductSort);
 
@@ -240,22 +148,27 @@ public class ProductServiceImpl implements ProductService {
 
         List<Category> categories = productQueryRepository.filteredCategory(cleanKeyword, categoryIds, brandIds);
 
-        List<GetProductDetailResponse> productDetailResponseList = toProductDetailResponse(products);
+        List<Long> productIds = products.stream()
+                .map(Product::getId)
+                .toList();
+        Map<Long, BigDecimal> priceMap = productQueryRepository.lowPriceOfProductList(productIds);
+        List<GetProductDetailResponse> productDetailResponseList = products.stream()
+                .map(product -> GetProductDetailResponse.of(product, priceMap.get(product.getId()) ))
+                .toList();
 
-        List<BrandResponse> brandListResponse = toBrandListResponse(brands);
-
-        List<CategorySearchResponse> categorySearchResponseList = toCategorySearchResponseList(categories);
+        List<BrandResponse> brandListResponse = BrandResponse.toListBrandResponse(brands);
+        List<CategorySearchResponse> categorySearchResponseList = CategorySearchResponse.toCategorySearchResponseList(categories);
 
         long totalCount = productQueryRepository.countFiltered(cleanKeyword, categoryIds, brandIds);
 
         int totalPage = (int) Math.ceil((double) totalCount / pageable.getPageSize());
-
         Pagination pagination = new Pagination(pageable.getPageNumber(), pageable.getPageSize(), totalCount, totalPage);
-        SearchProductResponse searchProductResponse = toSearchProductResponse(
+        SearchProductResponse searchProductResponse = SearchProductResponse.from(
                 productDetailResponseList,
                 brandListResponse,
                 categorySearchResponseList,
                 pagination);
+
         return ApiResponse.success(searchProductResponse);
     }
 
@@ -265,19 +178,15 @@ public class ProductServiceImpl implements ProductService {
                 () -> new NoSuchElementException("해당하는 사용자가 없습니다."));
         List<Product> favoriteProducts = productQueryRepository.getFavoriteProducts(memberId);
         List<GetFavoriteProductResponse> getFavoriteProductResponses = favoriteProducts.stream()
-                .map(product -> new GetFavoriteProductResponse(
-                        product.getId(),
-                        product.getBrandId(),
-                        product.getCategoryId(),
-                        product.getName(),
-                        product.getDescription(),
-                        product.getModelNumber(),
-                        product.getThumbnail()
-                ))
+                .map(GetFavoriteProductResponse::from)
                 .toList();
         long totalCount = productQueryRepository.countFavoriteProducts(memberId);
         int totalPage = (int) Math.ceil((double) totalCount / pageable.getPageSize());
         Pagination pagination = new Pagination(pageable.getPageNumber(), pageable.getPageSize(), totalCount, totalPage);
         return ApiResponse.success(new FavoriteProductList(pagination, getFavoriteProductResponses));
     }
+
+	public void validateProductOptionId(Long productOptionId) {
+		productOptionRepository.findById(productOptionId).orElseThrow(() -> new BusinessException(CommonErrorCode.NOT_FOUND, "존재하지 않는 상품입니다."));
+	}
 }
